# relievo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  environment.yml  execute.sh  pyproject.toml  template.blend
.github/workflows/: ci.yml
blender_relief/: blender_script.py  cli.py  download.py  log.py  mask.py  process.py  render.py
examples/: README.md  ramp_elevation_qgis.txt  ramp_hormuz.txt  ramp_prineos_festive.txt  ramp_subtle_atlas.txt  ramp_terrain.txt
examples/bboxes/: arabigo_bbox.geojson  rectangle.geojson  rectangle_iran.geojson  rectangle_prineos.geojson  rectangle_small.geojson  sample_bbox.geojson  south_america.geojson  tenerife.geojson  tenerife_bbox.geojson
profiles/: tenerife.toml
relievo/: blender_script.py  cli.py  download.py  log.py  mask.py  process.py  render.py  worldfile.py
tests/: conftest.py  test_cli.py  test_download.py  test_dry_run_area.py  test_mask.py  test_output_format.py  test_process.py  test_worldfile.py
