[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-relief"
version = "0.1.0"
description = "CLI to automate shaded relief map creation in Blender (Huffman method)"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.25",
    "pyproj>=3.0",
    # gdal (osgeo) must be installed via conda-forge, NOT pip
]

[project.scripts]
blender-relief = "blender_relief.cli:main"

[tool.setuptools.packages.find]
where = ["."]
